Fix embed canvas distortion: set explicit pixel dimensions, remove CSS stretch

--- a/css/style.css
+++ b/css/style.css
@@ -293,10 +293,7 @@ body.embed-mode .canvas-wrap {
 }
 
 body.embed-mode .canvas-wrap canvas {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
+    display: block;
     cursor: default;
 }
 
